# InteGraphAD

./: README.md  pyproject.toml  setup.py
integraphad/: __init__.py  example.py  integrators.py
